<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeaders"
                android:layout_gravity="center_vertical"
                android:id="@+id/tvRound_scoreSheet"/>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/ivRound_scoreSheet"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5">

            <TextView
                android:text="@string/lblName"
                android:theme="@style/TextViewHeaders" />

            <TextView
                android:text="@string/lblBid"
                android:theme="@style/TextViewHeaders" />

            <TextView
                android:text="@string/lblScore"
                android:theme="@style/TextViewHeaders" />

            <TextView
                android:layout_gravity="center"
                android:text="@string/lblSandbags"
                android:theme="@style/TextViewHeaders" />

            <TextView
                android:id="@+id/tv_p1_name"
                android:text="@string/player1"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p1_bid"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p1_score"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p1_sandbags"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p2_name"
                android:text="@string/player2"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p2_bid"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p2_score"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p2_sandbags"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p3_name"
                android:text="@string/player3"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p3_bid"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p3_score"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p3_sandbags"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p4_name"
                android:text="@string/player4"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p4_bid"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p4_score"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

            <TextView
                android:id="@+id/tv_p4_sandbags"
                android:layout_gravity="center"
                android:theme="@style/TextViewScoreBody" />

        </GridLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_Bids"
                android:text="@string/btBids"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                style="@android:style/Widget.Holo.Light.ImageButton"
                android:background="@android:color/holo_red_dark"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="32dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_Scores"
                android:text="@string/btScores"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                style="@android:style/Widget.Holo.Light.ImageButton"
                android:background="@android:color/holo_red_dark"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginRight="32dp"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</ScrollView>