<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_enter_names"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:src="@drawable/check"
            android:layout_margin="10dp"
            style="@android:style/Widget.Holo.Light.ImageButton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:theme="@style/TextViewLabels" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextNames"
                android:id="@+id/et_p1_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:theme="@style/TextViewLabels" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextNames"
                android:id="@+id/et_p2_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player3"
                android:theme="@style/TextViewLabels" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextNames"
                android:id="@+id/et_p3_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player4"
                android:theme="@style/TextViewLabels" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextNames"
                android:id="@+id/et_p4_name"/>
    </LinearLayout>
</ScrollView>