<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <GridLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_enter_scores"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:src="@drawable/check"
            android:layout_margin="10dp"
            style="@android:style/Widget.Holo.Light.ImageButton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:theme="@style/TextViewLabels" />

        <EditText
            android:id="@+id/np_p1_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextScore"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:theme="@style/TextViewLabels" />

        <EditText
            android:id="@+id/et_p2_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextScore" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player3"
                android:theme="@style/TextViewLabels" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextScore"
                android:id="@+id/et_p3_score"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player4"
                android:theme="@style/TextViewLabels" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextScore"
                android:id="@+id/et_p4_score"/>
    </GridLayout>
</ScrollView>