<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context="com.noartist.android.thirteen.MainActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:padding="25dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/thirteen_title" />

    <Button
        android:id="@+id/bt_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorSecondary"
        android:fontFamily="sans-serif"
        android:text="@string/start"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:id="@+id/bt_rules"
            android:text="@string/title_activity_rules"
            android:background="@color/colorSecondary"
            android:fontFamily="sans-serif"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:fontFamily="sans-serif"
            android:text="@string/app_help"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_rules"
        android:text="@string/title_activity_rules"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:background="@color/yellow"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_help"
        android:text="@string/app_help"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:background="@color/blue"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!--

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        -->

</LinearLayout>
